--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22436,5 +22436,8 @@ a .h_head:hover {
 }
 .footer_part {
     padding: 40px 0px 50px;
-    margin-top: 30px;
+    margin-top: 50px;
+}
+.footer_part .f_logo img {
+    height: 70px;
 }
