--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22437,6 +22437,7 @@ a .h_head:hover {
 .footer_part {
     padding: 40px 0px 50px;
     margin-top: 50px;
+    background: #02102a;
 }
 .footer_part .f_logo img {
     height: 70px;
