--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22440,7 +22440,7 @@ a .h_head:hover {
     background: #02102a;
 }
 .footer_part .f_logo img {
-    height: 70px;
+    height: auto;
 }
 .sec_pad {
     padding: 60px 0px;
