--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22451,6 +22451,19 @@ a .h_head:hover {
 .footer_part a i {
  padding-right: 0;
 }
+
+
+.text_box select {
+    font: 400 15px/60px "Poppins", sans-serif;
+    color: #222d39;
+    height: 60px;
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0px 2px 4px 0px rgb(12 0 46 / 4%);
+    width: 100%;
+    border: 1px solid #fff;
+    padding-left: 30px;
+}
 @media (max-width: 450px) {
     .footer_part .f_logo img {
         height: auto;
@@ -22466,7 +22479,7 @@ a .h_head:hover {
     .about_content {
         height: auto;
     }
-    .footer_part .f_logo img {
+    .footer_part .f_logo img
         height: auto;
     }
 }
